--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -1,24 +1,31 @@
-﻿<%@ Master ViewStateMode="Disabled" Language="C#" AutoEventWireup="true" CodeFile="Normal.master.cs" Inherits="lib_master_Normal" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage.master.cs" Inherits="html_MasterPage" %>
+
+<%@ Register src="ui/navbar_top.ascx" tagname="navbar_top" tagprefix="uc1" %>
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <head runat="server">
-        <asp:ContentPlaceHolder id="head" runat="server">
-        </asp:ContentPlaceHolder>
-        <link href="/lib/css/web/1.css" rel="stylesheet" type="text/css" />
-        <link href="/lib/css/web/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css" />
-        <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
-    </head>
-    <body>
+<head runat="server">
+    <asp:ContentPlaceHolder id="head" runat="server">
+    </asp:ContentPlaceHolder>
+    <link href="/lib/css/web/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css" />
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
+    <link href="/lib/css/web/1.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
 <div id="fb-root"></div>
 <script>    (function (d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) return;
     js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=561035830607291";
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=372490826229164";
     fjs.parentNode.insertBefore(js, fjs);
-} (document, 'script', 'facebook-jssdk'));</script>    
+} (document, 'script', 'facebook-jssdk'));</script>  
+    <div id="form1" class="container" runat="server">
+        <uc1:navbar_top ID="navbar_top1" runat="server" />        
+        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
+    </div> 
     <script>
         var domain = '<%=domain %>';
     </script>
@@ -33,8 +40,5 @@
     <script src="/lib/js/ckeditor/adapters/jquery.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/admin.js" type="text/javascript"></script>
     <script src="/lib/js/web/home.js" type="text/javascript"></script>
-    <form id="form1" runat="server">
-        <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>        
-    </form>
 </body>
 </html>
