--- a/web/lib/css/web/1.css
+++ b/web/lib/css/web/1.css
@@ -7,7 +7,10 @@ html, body
     padding:0;
     font-family: Tahoma;
 }
-
+a:hover, a:active, a:focus, object, embed  
+{
+    outline: 0;
+}
 ul,li,ol
 {
     list-style-type:none;
@@ -117,24 +120,59 @@ ul,li,ol
   left: auto;
 }
 
-.nhatkycon-logo 
-{
-    display: inline-block;
-    background-image: url(i/logo.png);
-    width: 196px;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100px;
-    margin: 0px auto;
-}
-.img-baby-icon-navbar {
-    width: 50px;
-    margin-right: 10px;
-}
-.navbar-form.navbar-form-200 {
-    width: 200px;
-}
+
 .row {
     margin-bottom: 10px;
     margin-top: 10px;
+}
+.navbar-custom {
+}
+.navbar-custom .navbar-brand {
+}
+.navbar-custom .search-input {
+    background-color: #666;
+    border: solid 1px #000;
+}
+#search {
+    position: relative;
+}
+#search input::-webkit-input-placeholder
+,#search input:-moz-placeholder
+,#search input::-moz-placeholder
+,#search input:-ms-input-placeholder 
+{
+    color: #000;
+}
+#search input[type="text"] {
+    background: no-repeat 10px 6px #444;
+    border: 1px solid #000;
+    font: bold 12px Arial,Helvetica,Sans-serif;
+    color: #000;
+    width: 150px;
+    padding: 6px 35px 6px 15px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -webkit-transition: all 0.7s ease 0s;
+    -moz-transition: all 0.7s ease 0s;
+    -o-transition: all 0.7s ease 0s;
+    transition: all 0.7s ease 0s;
+}
+
+#search input[type="text"]:focus {
+    width: 200px;
+    background-color: #FFF;
+}
+#search .search-submit {
+    background-color: transparent;
+    border: 0px;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+}
+.navbar-text {
 }
