--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -1,10 +1,14 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeFile="MasterPage.master.cs" Inherits="html_MasterPage" %>
+<%@ Import Namespace="docsoft" %>
 
 <%@ Register src="ui/navbar_top.ascx" tagname="navbar_top" tagprefix="uc1" %>
 
-<%@ Register src="ui/userbar.ascx" tagname="userbar" tagprefix="uc2" %>
+<%@ Register src="~/lib/ui/HeThong/userbar.ascx" tagname="userbar" tagprefix="hethong" %>
 <%@ Register src="ui/promotedCars.ascx" tagname="promotedCars" tagprefix="uc2" %>
-<%@ Register src="ui/adv-top.ascx" tagname="banner" tagprefix="adv" %>
+<%@ Register src="~/lib/ui/HeThong/navtop.ascx" tagname="navtop" tagprefix="hethong" %>
+<%@ Register src="~/lib/ui/adv/homeTop1000.ascx" tagname="homeTop1000" tagprefix="adv" %>
+<%@ Register src="~/lib/ui/cars/promoted.ascx" tagName="Promoted" tagPrefix="cars" %>
+<%@ Register src="~/lib/ui/HeThong/login.ascx" tagname="login" tagprefix="hethong" %>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -15,22 +19,28 @@
     <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="/lib/css/web/1.css" rel="stylesheet" type="text/css" />
+    <script src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=372490826229164"></script>        
+    <script>
+        var src = '<%=Request.Url.PathAndQuery %>';
+        var logged = <%=Security.IsAuthenticated().ToString().ToLower()%>;
+        FB.init({
+            appId: '372490826229164',
+            status: true, // check login status
+            cookie: true, // enable cookies to allow the server to access the session
+            xfbml: true  // parse XFBML
+        });
+
+    </script>
 </head>
 <body>
-<%--<div id="fb-root"></div>
-<script>    (function (d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=372490826229164";
-    fjs.parentNode.insertBefore(js, fjs);
-} (document, 'script', 'facebook-jssdk'));</script>  --%>
+    <div id="fb-root"></div>
     <div id="form1"  runat="server">
-        <uc2:userbar ID="userbar1" runat="server" />        
+        <hethong:userbar ID="userbar1" runat="server" />        
         <div class="container">
-            <adv:banner ID="banner" runat="server" />
-            <uc2:promotedCars ID="promotedCars" runat="server" />
-            <uc1:navbar_top ID="navbar_top1" runat="server" />
+            <adv:homeTop1000 runat="server" ID="homeTop1000" />
+            <cars:Promoted ID="promotedCars" runat="server" />
+            <hethong:navtop ID="navbar_top1" runat="server" />
+            <hethong:login ID="login" runat="server"/>
             <div class="main-content">
                 <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
             </div>
@@ -49,6 +59,6 @@
     <script src="/lib/js/ckeditor/ckeditor.js" type="text/javascript"></script>
     <script src="/lib/js/ckeditor/adapters/jquery.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/admin.js" type="text/javascript"></script>
-    <script src="/lib/js/web/home.js" type="text/javascript"></script>
+    <script src="/lib/js/web/xetui.js" type="text/javascript"></script>
 </body>
 </html>
