--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -19,6 +19,7 @@
     <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="/lib/css/web/1.css" rel="stylesheet" type="text/css" />
+    <script src="/lib/js/jqueryLib/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=372490826229164"></script>        
     <script>
         var src = '<%=Request.Url.PathAndQuery %>';
@@ -49,7 +50,6 @@
     <script>
         var domain = '<%=domain %>';
     </script>
-    <script src="/lib/js/jqueryLib/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/jquery-ui-1.10.2.custom.min.js" type="text/javascript"></script>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/lib/js/web/c.js" type="text/javascript"></script>
@@ -58,6 +58,7 @@
     <script src="/lib/js/jqueryLib/ajaxupload.js" type="text/javascript"></script>
     <script src="/lib/js/ckeditor/ckeditor.js" type="text/javascript"></script>
     <script src="/lib/js/ckeditor/adapters/jquery.js" type="text/javascript"></script>
+    <script src="/lib/js/jqueryLib/jquery.tmpl.min.js"></script>
     <script src="/lib/js/jqueryLib/admin.js" type="text/javascript"></script>
     <script src="/lib/js/web/xetui.js" type="text/javascript"></script>
 </body>
