--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -16,7 +16,8 @@
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
     <link href="/lib/css/web/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css" />
-    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <%--<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />--%>
+    <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="/lib/css/web/1.css" rel="stylesheet" type="text/css" />
     <script src="/lib/js/jqueryLib/jquery-1.10.2.min.js" type="text/javascript"></script>
@@ -52,6 +53,7 @@
     </script>
     <script src="/lib/js/jqueryLib/jquery-ui-1.10.2.custom.min.js" type="text/javascript"></script>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/lib/js/ckeditor/ckeditor.js" type="text/javascript"></script>
     <script src="/lib/js/web/c.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/facebox.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
