--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -9,6 +9,8 @@
 <%@ Register src="~/lib/ui/adv/homeTop1000.ascx" tagname="homeTop1000" tagprefix="adv" %>
 <%@ Register src="~/lib/ui/cars/promoted.ascx" tagName="Promoted" tagPrefix="cars" %>
 <%@ Register src="~/lib/ui/HeThong/login.ascx" tagname="login" tagprefix="hethong" %>
+<%@ Register Src="~/lib/ui/HeThong/pmPostBox.ascx" TagPrefix="hethong" TagName="pmPostBox" %>
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -49,12 +51,14 @@
             </div>
         </div>
     </div> 
+    <hethong:pmPostBox runat="server" ID="pmPostBox" />
     <script>
         var domain = '<%=domain %>';
     </script>
     <script src="/lib/js/jqueryLib/jquery-ui-1.10.2.custom.min.js" type="text/javascript"></script>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/lib/js/ckeditor/ckeditor.js" type="text/javascript"></script>
+    <script src="/lib/js/jqueryLib/jquery.scrollTo-min.js"></script>
     <script src="/lib/js/web/c.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/facebox.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
