--- a/web/lib/css/web/1.css
+++ b/web/lib/css/web/1.css
@@ -13,6 +13,9 @@ html, body
 body.loggedIn {
     padding-top: 70px;
 }
+body.unActive {
+    padding-top: 170px;
+}
 a:hover, a:active, a:focus, object, embed  
 {
     outline: 0;
@@ -735,4 +738,113 @@ h1, h2 {
 }
 .pm-item-older {
     text-align: center;
+}
+.navbar-noti {
+    margin: 0px;
+}
+.navbar-noti li {
+    float: left;
+    position: relative;
+}
+.navbar-noti li a {
+    float: left;
+    position: relative;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.navbar-noti .open .dropdown-menu {
+    float: left;
+    position: absolute;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+.alert-notXacNhan {
+    border-width: 0 0 1px;
+    margin-bottom: 0px;
+}
+
+.profile-box {
+    height: 140px;
+    background: #2b3339 url(i/car-view-infobox.jpg) repeat-x;
+    overflow: hidden;
+    padding: 10px;
+    background-position: bottom;
+    background-color: #1A1E21;
+}
+.profile-user-avatar {
+    float: left;
+    width: 100px;
+    
+    padding-top: 10px;
+}
+.profile-user-anh {
+    float: left;
+    width: 100px;
+    background-image: url(i/no-image.jpg);
+    height: 100px;
+}
+.profile-user-note 
+{
+    margin-top: 10px;    
+    padding-left: 120px;    
+}
+.profile-user-tinh {
+    color: #8f9193;
+    color: rgba(255,255,255,0.5);
+    font: 12px/1.4 sans-serif;
+}
+.profile-user-username {
+    margin: 0 5px 0 0;
+    font: 24px/26px sans-serif;
+    text-shadow: 2px 2px rgba(0,0,0,0.5);
+    color: #fff;
+    cursor: auto;
+}
+
+.user-stats-block {
+    margin: -10px 20px -10px -10px;
+    padding: 10px;
+    float: left;
+    margin: 0 30px 0 0;
+    color: #8f9193;
+    text-decoration: none;
+    padding-left: 0px;
+    padding-bottom: 0px;
+    color: rgba(255,255,255,0.5);
+}
+.user-stats-block:hover {
+    color: #8f9193;
+    text-decoration: none;
+    color: rgba(255,255,255,0.5);
+}
+.user-stats-num {
+    display: block;
+    margin: 0 0 5px;
+    font: bold 18px/1 sans-serif;
+    color: #fff;
+    padding: 4px;
+    background-color: #282F33;
+    text-decoration: none;
+    text-shadow: 1px 1px #000;
+}
+.user-stats-txt {
+    text-decoration: none;
+    font: bold 11px/1 sans-serif;
+}
+.profile-user-static 
+{
+    display: inline-block;
+    margin: -2px -10px;
+    padding: 2px 10px;
+    font: 11px/1.6 sans-serif;
+    color: #8f9193;
+    color: rgba(255,255,255,0.5);
+}
+.row.nopadding {
+    padding: 0px;
+    margin: 0px;
 }
