--- a/web/lib/css/web/xe.css
+++ b/web/lib/css/web/xe.css
@@ -185,3 +185,48 @@
 .carcard-big .carcard-owner {
     font: 11px/13px sans-serif;
 }
+.likedCar-item {
+    overflow: hidden;
+    min-height: 45px;
+    padding: 10px 30px 10px 10px;
+    -webkit-transition: background-color 0.15s ease-in-out;
+    -moz-transition: background-color 0.15s ease-in-out;
+    -o-transition: background-color 0.15s ease-in-out;
+    -ms-transition: background-color 0.15s ease-in-out;
+    transition: background-color 0.15s ease-in-out;
+}
+.likedCar-item:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+.likedCar-item-user {
+    float: left;
+    width: 80px;
+}
+.likedCar-item-user img{
+    width: 80px;
+    height: 45px;
+}
+.likedCar-item-body {
+}
+.likedCar-item-caption {
+    display: block;
+    margin: 0 0 3px 90px;
+    font: 12px/14px sans-serif;
+    word-wrap: break-word;    
+}
+.likedCar-item-city {
+    margin: 0 0 0 90px;
+    font: 10px/1.3 Tahoma,sans-serif;
+    word-wrap: break-word;
+    color: gray;
+}
+.likedCar-item-username {
+    margin: 0 0 0 90px;
+    font: 10px/1.3 Tahoma,sans-serif;
+    word-wrap: break-word;
+    color: #205090;
+    text-decoration: none;
+    display: block;
+}
