--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -17,6 +17,7 @@
 <head runat="server">
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="/lib/css/web/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css" />
     <%--<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />--%>
     <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
