--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -19,8 +19,8 @@
     </asp:ContentPlaceHolder>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="/lib/css/web/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css" />
-    <%--<link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />--%>
-    <link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <%--<link href="/lib/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />--%>
     <link href="/lib/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="/lib/css/web/1.css" rel="stylesheet" type="text/css" />
     <script src="/lib/js/jqueryLib/jquery-1.10.2.min.js" type="text/javascript"></script>
