--- a/web/lib/css/web/adm.css
+++ b/web/lib/css/web/adm.css
@@ -1,3 +1,25 @@
 ﻿body {
     padding-top: 70px;
 }
+.car-add-upload-box {
+    position: relative;
+}
+.car-multipleUpload-btn {
+    cursor: pointer;
+    direction: ltr;
+    font-size: 23px;
+    margin: 0;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transform: translate(-300px, 0px) scale(4);
+}
+
+.car-add-upload-dropzone {
+    margin-top: 20px;
+    border: 1px dashed #CCCCCC;
+    min-height: 100px;
+    padding: 10px;
+    background-color: #FFF;
+}
