--- a/web/lib/master/admin.master
+++ b/web/lib/master/admin.master
@@ -18,8 +18,9 @@
     <script src="/lib/js/jqueryLib/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script>
         var src = '<%=Request.Url.PathAndQuery %>';
-        var isAdmin = true;
         var logged = <%=Security.IsAuthenticated().ToString().ToLower()%>;
+        var admMode = true;
+        var admKey = '';
     </script>
 </head>
 <body>
