--- a/web/lib/css/web/1.css
+++ b/web/lib/css/web/1.css
@@ -1286,3 +1286,37 @@ h3.profile-info-header {
     clear: left;
     margin: 0 0 20px;
 }
+
+.blogNhom-item {
+    margin: 0 0 10px;
+}
+.blogNhom-item-title {
+    font-size: 15px;
+    line-height: 1.2;
+    font-weight: bold;
+}
+.blogNhom-item-user {
+    font-size: 11px;
+    line-height: 1.2;
+    margin-left: 0.2em;
+    color: #205090;
+    font-weight: normal;
+    text-shadow: 1px 1px #f8f8f8;
+}
+.blogNhom-item-date {
+    font-size: 11px;
+    line-height: 1.2;
+    margin-left: 0.2em;
+    color: gray;
+    font-weight: normal;
+    text-shadow: 1px 1px #f8f8f8;
+}
+.nhomView-intro {
+    font-size: 15px;
+    line-height: 1.4;
+    display: block;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+}
