--- a/web/lib/css/web/1.css
+++ b/web/lib/css/web/1.css
@@ -215,7 +215,8 @@ h1, h2 {
     background-color: transparent;
     border: 0px;
     color: #666;
-    margin-left: -30px;
+    margin-left: -40px;
+    margin-top: 5px;
 }
 .navbar-text {
 }
