--- a/web/lib/css/web/1.css
+++ b/web/lib/css/web/1.css
@@ -1322,3 +1322,13 @@ h3.profile-info-header {
     -webkit-margin-start: 0px;
     -webkit-margin-end: 0px;
 }
+.Model-Item {
+    display: inline-block;
+    padding: 8px 10px;
+    color: #205090;
+    text-decoration: none;
+    width: 140px;
+}
+.Model-Item:hover {
+    background-color: #FFF;
+}
