--- a/web/lib/master/admin.master
+++ b/web/lib/master/admin.master
@@ -34,14 +34,14 @@
     </script>
     <script src="/lib/js/jqueryLib/jquery-ui-1.10.2.custom.min.js" type="text/javascript"></script>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/lib/js/ckeditor/ckeditor.js" type="text/javascript"></script>
+    <script src="/lib/js/ckeditor.4.3.1/ckeditor.js" type="text/javascript"></script>
+    <script src="/lib/js/ckeditor.4.3.1/adapters/jquery.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/jquery.scrollTo-min.js"></script>
     <script src="/lib/js/web/c.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/facebox.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/ajaxupload.js" type="text/javascript"></script>
-    <script src="/lib/js/ckeditor/ckeditor.js" type="text/javascript"></script>
-    <script src="/lib/js/ckeditor/adapters/jquery.js" type="text/javascript"></script>
+    
     <script src="/lib/js/jqueryLib/jquery.tmpl.min.js"></script>
     <script src="/lib/js/jqueryLib/admin.js" type="text/javascript"></script>
     <script src="/lib/js/web/xetui.js" type="text/javascript"></script>
