--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -26,11 +26,13 @@
     <link href="/lib/css/web/1.css" rel="stylesheet" type="text/css" />
     <script src="/lib/js/jqueryLib/jquery-1.10.2.min.js" type="text/javascript"></script>
     <%--<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.1/jquery.min.js"></script>--%>
+    <link rel="shortcut icon" href="/lib/favi.png" />
     <script src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=372490826229164"></script>        
     <script>
         var src = '<%=Request.Url.PathAndQuery %>';
         var logged = <%=Security.IsAuthenticated().ToString().ToLower()%>;
         var admMode = false;
+        var hideWelcome = <%=Security.IsAuthenticated().ToString().ToLower()%>;
         var admKey = '';
         FB.init({
             appId: '372490826229164',
