--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -66,6 +66,7 @@
     </script>
     <%--<script src="/lib/js/jqueryLib/jquery-ui-1.10.2.custom.min.js" type="text/javascript"></script>--%>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/lib/js/jqueryLib/hisrc.js"></script>
     <%--<script src="/lib/js/ckeditor/ckeditor.js" type="text/javascript"></script>--%>
     <script src="/lib/js/ckeditor.4.3.1/ckeditor.js" type="text/javascript"></script>
     <script src="/lib/js/ckeditor.4.3.1/adapters/jquery.js" type="text/javascript"></script>
