--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -6,7 +6,6 @@
 <%@ Register src="~/lib/ui/HeThong/userbar.ascx" tagname="userbar" tagprefix="hethong" %>
 <%@ Register src="/lib/ui/cars/promotedCars.ascx" tagname="promotedCars" tagprefix="cars" %>
 <%@ Register src="~/lib/ui/HeThong/navtop.ascx" tagname="navtop" tagprefix="hethong" %>
-<%@ Register src="~/lib/ui/adv/homeTop1000.ascx" tagname="homeTop1000" tagprefix="adv" %>
 <%@ Register src="~/lib/ui/HeThong/login.ascx" tagname="login" tagprefix="hethong" %>
 <%@ Register src="~/lib/ui/HeThong/WelcomeModal.ascx" tagname="WelcomeModal" tagprefix="hethong" %>
 <%@ Register Src="~/lib/ui/HeThong/pmPostBox.ascx" TagPrefix="hethong" TagName="pmPostBox" %>
@@ -49,7 +48,7 @@
         <hethong:AlertModal ID="AlertModal" runat="server"/>
         <hethong:userbar ID="userbar1" runat="server" />        
         <div class="container">
-            <adv:homeTop1000 runat="server" ID="homeTop1000" />
+            <div data-loai="1010" data-keywords="" class="adv-home-100 adv-box"></div>
             <cars:promotedCars ID="promotedCars" runat="server" />
             <hethong:navtop ID="navbar_top1" runat="server" />
             <hethong:login ID="login" runat="server"/>
@@ -66,7 +65,6 @@
     </script>
     <%--<script src="/lib/js/jqueryLib/jquery-ui-1.10.2.custom.min.js" type="text/javascript"></script>--%>
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/lib/js/jqueryLib/hisrc.js"></script>
     <%--<script src="/lib/js/ckeditor/ckeditor.js" type="text/javascript"></script>--%>
     <script src="/lib/js/ckeditor.4.3.1/ckeditor.js" type="text/javascript"></script>
     <script src="/lib/js/ckeditor.4.3.1/adapters/jquery.js" type="text/javascript"></script>
