--- a/web/html/MasterPage.master
+++ b/web/html/MasterPage.master
@@ -73,6 +73,7 @@
     <script src="/lib/js/jqueryLib/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/ajaxupload.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/jquery.tmpl.min.js"></script>
+    <script src="/lib/js/jqueryLib/touchswipe.min.js" type="text/javascript"></script>
     <script src="/lib/js/jqueryLib/admin.js" type="text/javascript"></script>
     <script src="/lib/js/web/xetui.js" type="text/javascript"></script>
 </body>
